Rearrange files into folders

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,7 +13,7 @@
   }
 }
 
-@import './utilities/variables';
+@import '../utilities/variables';
 .App {
   background-color: $background;
   height: 100vh;
