--- a/client/src/utilities/_variables.scss
+++ b/client/src/utilities/_variables.scss
@@ -1,6 +1,6 @@
 $main: darkblue;
-$accent: yellow;
+$accent: #e3e030;
 $background: blue;
 
-$card-width: 20rem;
-$card-height: 25rem;
+$card-width: 15rem;
+$card-height: 20rem;
