--- a/client/src/utilities/_variables.scss
+++ b/client/src/utilities/_variables.scss
@@ -4,3 +4,12 @@ $background: blue;
 
 $card-width: 15rem;
 $card-height: 20rem;
+
+$card-width-md: 10rem;
+$card-height-md: 15rem;
+
+$card-height-sm: 5rem;
+$card-width-sm: 10rem;
+
+$md-max: 900px;
+$sm-max: 600px;
