--- a/client/src/styles/Collection.scss
+++ b/client/src/styles/Collection.scss
@@ -12,16 +12,13 @@ $grid-gap: '20px';
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(auto-fill, auto);
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  align-items: center;
 }
 .grid .item {
   grid-column: span 1 / span 1;
-  width: $card-width;
-  height: $card-height;
-  margin: $grid-gap;
-  @media only screen and (max-width:$md-max) {
-   margin: 3px;
-  }
-  @media only screen and (max-width:$sm-max) {
-    margin: 1px;
-   }
+  width: auto;
+  height: auto;
 }
