Add greying out of Cards not owned/checked

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -16,5 +16,6 @@
 @import '../utilities/variables';
 .App {
   background-color: $background;
-  height: 100vh;
+  height: auto;
+  padding: 75px 0;
 }
