--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -15,7 +15,7 @@
 
 @import '../utilities/variables';
 .App {
-  background-color: $background;
+  background-color: $main;
   height: auto;
   padding: 75px 0;
 }
