--- a/client/src/utilities/_variables.scss
+++ b/client/src/utilities/_variables.scss
@@ -2,14 +2,14 @@ $main: darkblue;
 $accent: #e3e030;
 $background: blue;
 
-$card-width: 15rem;
-$card-height: 20rem;
+$card-width: 10rem;
+$card-height: 15rem;
 
-$card-width-md: 10rem;
-$card-height-md: 15rem;
+$card-width-md: (3/4) * $card-width;
+$card-height-md: (3/4) * $card-height;
 
-$card-width-sm: 10rem;
-$card-height-sm: 15rem;
+$card-width-sm: (2/3) * $card-width;
+$card-height-sm: (2/3) * $card-height;
 
-$md-max: 900px;
-$sm-max: 600px;
+$md-max: 992px;
+$sm-max: 768px;
