--- a/client/src/styles/Card.scss
+++ b/client/src/styles/Card.scss
@@ -72,6 +72,7 @@
   top:50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   @media only screen and (max-width:$md-max) and (min-width:$sm-max) {
     height: $card-height-md;
     width: $card-width-md;
@@ -96,7 +97,7 @@
   transform: rotateY(180deg);
 }
 
-.card-front, .card-back {
+.card-front, .card-back, .poke-front, .poke-back {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -104,7 +105,7 @@
   border-radius: 4%;
 }
 
-.card-front {
+.card-front, .poke-back {
   background-color: blue;
   height: $card-height - 1rem;
   width: $card-width - 1rem;
@@ -120,9 +121,13 @@
    }
 }
 
-.card-back {
+.poke-front, .card-back {
   background-color: transparent;
   color: white;
-  transform: rotateY(180deg);
 
 }
+
+.card-back, .poke-back {
+  transform: rotateY(180deg);
+}
+
