--- a/client/src/styles/Card.scss
+++ b/client/src/styles/Card.scss
@@ -4,17 +4,14 @@
 .card-mat {
   height: auto;
   width: auto;
-  padding: 3px 5px 1px 5px;
+  padding: 0.2rem 0.4rem;
   background: rgba(200, 200, 200, 1);
-  margin: 5px 0;
-  .checkbox {
-    margin: 0 8px;
-  }
+  margin: 0.4rem 0;
   @media only screen and (max-width:$md-max) and (min-width:$sm-max) {
     
   }
   @media only screen and (max-width:$sm-max) {
-    border: 1px solid black;
+    border: 0.1rem solid black;
    }
 }
 .card {
@@ -39,8 +36,19 @@
 .card-plaque {
   background-color: rgba(30,30,30,0.7);
   color: white;
-  padding: 2px 0 4px 0;
-  margin: 2px 0;
+  padding: 0.2rem 0 0.2rem 0;
+  margin: 0.2rem 0;
+  .checkbox-wrapper{
+    border-radius: 4%;
+    .checkbox {
+      appearance: none;
+      background-color: $background;
+      border-radius: 4%;
+      height: 1.5rem;
+      width: 1.5rem;
+      margin: 0 0.4rem 0 0;
+    }
+  }
 }
 
 .carad {
@@ -106,7 +114,7 @@
 }
 
 .card-front, .poke-back {
-  background-color: blue;
+  background-color: $background;
   height: $card-height - 1rem;
   width: $card-width - 1rem;
   border: 0.5rem solid $main;
@@ -123,7 +131,6 @@
 
 .poke-front, .card-back {
   background-color: transparent;
-  color: white;
 
 }
 
