--- a/client/src/styles/Card.scss
+++ b/client/src/styles/Card.scss
@@ -38,17 +38,25 @@
   color: white;
   padding: 0.2rem 0 0.2rem 0;
   margin: 0.2rem 0;
-  .checkbox-wrapper{
-    border-radius: 4%;
-    .checkbox {
-      appearance: none;
-      background-color: $background;
-      border-radius: 4%;
-      height: 1.5rem;
-      width: 1.5rem;
-      margin: 0 0.4rem 0 0;
+  input[type="checkbox"].checkbox {
+    position: relative;
+    background-color: $background;
+    border-radius: 4px;
+    height: 1rem;
+    width: 1rem;
+    padding: 1px 3px;
+    margin: 0 0.4rem 0 0;
+    appearance: none;
+    &:checked {
+      background: indigo;
+      color: white;
+      &::before {
+        content: '\2713';
+      }
     }
+
   }
+  
 }
 
 .carad {
