--- a/client/src/styles/Collection.scss
+++ b/client/src/styles/Collection.scss
@@ -5,7 +5,7 @@ $grid-gap: '20px';
 .collection {
   height: auto;
   width: auto;
-  background-color: $main;
+  background-color: lightslategrey;
   color: white;
 }
 
