--- a/client/src/utilities/_variables.scss
+++ b/client/src/utilities/_variables.scss
@@ -13,3 +13,7 @@ $card-height-sm: (2/3) * $card-height;
 
 $md-max: 992px;
 $sm-max: 768px;
+
+$font-size: 1rem;
+$font-size-md: 1rem;
+$font-size-sm: 0.8rem;
