Add styling for collections component, and for the card container

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -2,8 +2,7 @@
 
 .App {
   text-align: center;
-
-  background-color: $main;
+  background-color: $background;
   height: auto;
-  padding: 75px 0;
+  padding: 0;
 }
