--- a/client/src/styles/Card.scss
+++ b/client/src/styles/Card.scss
@@ -136,7 +136,10 @@
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-
+.greybg {
+  background-color: $greyed;
+  border-radius: 0.2rem;
+}
 .card:hover .card-inner {
   transform: rotateY(180deg);
 }
@@ -146,7 +149,7 @@
   height: 100%;
   position: absolute;
   backface-visibility: hidden;
-  border-radius: 4%;
+  border-radius: 0.2rem;
 }
 
 .card-front, .poke-back {
